# zkmist

./: .env.example  .gitignore  .gitmodules  CLAIMING_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  PRD.md  README.md  SECURITY.md  V2_PLAN.md
.github/workflows/: ci.yml
circuits/: .gitignore  Cargo.toml
circuits/src/: claim_axiom.rs  compat.rs  keccak.rs  keccak_axiom.rs  lib.rs  merkle.rs  merkle_axiom.rs  nullifier.rs  nullifier_axiom.rs  poseidon.rs  poseidon_axiom.rs  secp256k1.rs  secp_axiom.rs  trivial.rs
circuits/src/gadgets/: cond_swap.rs  field_accumulator.rs  field_arith.rs  mod.rs  range_check.rs
circuits/tests/: address_bridge_axiom.rs  axiom_real_kzg.rs  axiom_solidity_verifier.rs  axiom_stack_foundation.rs  carry_chain_soundness.rs  claim_axiom.rs  claim_evm_roundtrip.rs  halo2wrong_integration.rs  keccak_axiom.rs  merkle_tree_halo2base.rs  poseidon_axiom.rs  range_check_soundness.rs  secp_axiom.rs  seed_cell_soundness.rs
cli/: .gitignore  Cargo.toml
cli/examples/: prime_dev_srs.rs
cli/src/: abi.rs  commands.rs  constants.rs  download.rs  guest.rs  halo2_prover.rs  halo2_prover_axiom.rs  helpers.rs  main.rs  types.rs
cli/tests/: e2e_zkvm.rs
contracts/: .gas-snapshot  .gitmodules  Halo2Verifier.axiom.sol  README.md  deploy-base.sh  foundry.toml
contracts/broadcast/Deploy.s.sol/8453/: run-latest.json
contracts/lib/risc0-ethereum/contracts/: deployment.toml
contracts/lib/risc0-ethereum/contracts/script/: CheckTimelockRoles.s.sol  README.md
contracts/lib/risc0-ethereum/contracts/src/groth16/: ControlID.sol
contracts/script/: Deploy.s.sol  DeployAll.s.sol  DeployV2.s.sol  Verify.s.sol
contracts/src/: Halo2Verifier.axiom.sol  Halo2Verifier.sol  Halo2VerifyingKey.sol  IRiscZeroVerifier.sol  ZKMAirdrop.sol  ZKMAirdropV2.sol  ZKMToken.sol  ZKMTokenV2.sol
contracts/test/: BugHunt.t.sol  Malleability.t.sol  TestUtils.sol  ZKM.e2e.t.sol  ZKM.fork.t.sol  ZKM.fuzz.t.sol  ZKM.gasbench.t.sol  ZKM.integration.t.sol  ZKM.realroundtrip.t.sol  ZKM.t.sol  ZKM.verify.t.sol  ZKMV2.t.sol  ZKMV2E2E.t.sol  ZKMV2Fuzz.t.sol  ZKMV2GasBench.t.sol
docs/: SESSION_HANDOFF.md  axiom-backend-migration.md  glv-secp256k1-design.md  kzg-srs.md  secp256k1-migration-plan.md
gen-production-verifier/: Cargo.toml
gen-production-verifier/src/: main.rs
guest/: Cargo.toml
guest/.cargo/: config.toml
guest/src/: main.rs
merkle-tree/: Cargo.toml
merkle-tree/examples/: parallel_halo2_root.rs
merkle-tree/src/: halo2base.rs  lib.rs
scripts/: e2e-test.sh  fetch-pse-srs.sh  mainnet-deploy.sh  real-kzg-roundtrip.sh  testnet-deploy.sh  verify-srs-provenance.sh
tools/: Cargo.toml
tools/examples/: prime_dev_srs.rs
tools/src/: compute_image_id.rs  compute_root.rs  gen_verifier.rs  monitor.rs  readiness.rs  srs_guard.rs  truncate_srs.rs  verify_srs.rs  verify_srs_from_ptau.rs
