[package]
name = "zkmist-circuits"
version = "0.2.0"
edition = "2021"
description = "Halo2-KZG circuits for ZKMist V2 anonymous airdrop claims"

[dependencies]
halo2_proofs = "0.3.0"
halo2curves = "0.6.0"
ark-bn254 = "0.5"
ark-ff = "0.5"
ff = "0.13"
group = "0.13"
# Poseidon hash — used to extract round constants and validate against
light-poseidon = "0.4"
# Byte reversal for ark-bn254 ↔ halo2curves field element conversion
num-bigint = "0.4"
num-traits = "0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[features]
# Marker feature enabled ONLY by `gen-production-verifier` (its separate
# workspace compiles this crate against the PSE git fork of halo2, which has a
# divergent `ConstraintSystem` API). When enabled, the `compat` shim routes
# `query_fixed`/`lookup`/etc. to the git-fork call signatures; when disabled
# (the main workspace: cli/tools/tests), the crates.io 0.3.x signatures are
# used. NEVER enable this in the main workspace — it would break the prover.
default = []
git-fork-api = []

[dev-dependencies]
rand = "0.8"
hex = "0.4"
zkmist-merkle-tree = { path = "../merkle-tree" }
