[package]
name = "zkmist-circuits"
version = "0.2.0"
edition = "2021"
description = "Halo2-KZG circuits for ZKMist V2 anonymous airdrop claims"

[dependencies]
halo2_proofs.workspace = true
halo2curves.workspace = true
ark-bn254 = "0.5"
ark-ff = "0.5"
ff = "0.13"
group = "0.13"
# Poseidon hash — used to extract round constants and validate against
light-poseidon = "0.4"
# Byte reversal for ark-bn254 ↔ halo2curves field element conversion
num-bigint = "0.4"
num-traits = "0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }
# Audited secp256k1 / non-native field arithmetic (PSE halo2wrong). Phase A of
# the migration in docs/secp256k1-migration-plan.md: dependency is available;
# the hand-rolled Secp256k1Chip is NOT yet replaced. Pins the SAME PSE halo2
# v0.3.0 fork as this workspace (verified: cargo unifies to one halo2_proofs).
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2024_01_31", default-features = false }
# Phase 1 axiom backend migration: the axiom stack (halo2-base eDSL + halo2-ecc
# audited secp256k1). Coexists with the PSE stack until the circuit is migrated.
halo2-base = "=0.5.0"
halo2-ecc = "=0.5.0"
# Phase B: the ECC/integer/maingate sub-crates (the umbrella `halo2wrong` crate
# alone cannot do EC arithmetic). Same git tag → same PSE halo2 v0.3.0 fork.
ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2024_01_31" }
integer = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2024_01_31" }
maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2024_01_31" }

[features]
# Always enabled now that the whole workspace is on the PSE git fork (see
# root Cargo.toml). routes `query_fixed`/`lookup` to the fork signatures via
# circuits/src/compat.rs. Kept as a feature for clarity/documentation; no
# longer a fork switch.
default = ["git-fork-api"]
git-fork-api = []

[dev-dependencies]
rand = "0.8"
hex = "0.4"
zkmist-merkle-tree = { path = "../merkle-tree" }
halo2_solidity_verifier = { path = "../vendor/halo2-solidity-verifier" }
