[package]
name = "zkmist-circuits"
version = "0.2.0"
edition = "2021"
description = "Axiom-backend Halo2-KZG circuits for ZKMist V2 anonymous airdrop claims"

[dependencies]
ff = "0.13"
light-poseidon = "0.4"
poseidon-primitives = "0.2"
num-bigint = "0.4"
num-traits = "0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.5.3" }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.5.3" }

[features]
default = []

[dev-dependencies]
rand = "0.8"
hex = "0.4"
group = "0.13"
ark-bn254 = "0.5"
ark-ff = "0.5"
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", features = ["revm"] }
zkmist-merkle-tree = { path = "../merkle-tree" }
