[package]
name = "zkmist-cli"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "zkmist"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }
# Ethereum interaction
alloy = { version = "1", features = ["providers", "signer-local", "contract", "transport-http"] }
# ZK proof generation — Halo2-KZG
zkmist-circuits = { path = "../circuits" }
halo2_proofs = "0.3.0"
halo2curves = "0.6.0"
rand = "0.8"
# Merkle tree (shared library)
zkmist-merkle-tree = { path = "../merkle-tree" }
# Crypto primitives
ark-bn254 = "0.5"
ark-ff = "0.5"
light-poseidon = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
# Hidden password input
rpassword = "7"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Hex encoding/decoding
hex = "0.4"
# HTTP client for GitHub downloads + KZG SRS streaming download
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# Async stream iteration (reqwest bytes_stream) for the large KZG SRS download
futures-util = "0.3"
# SHA-256 for file integrity checks
sha2 = "0.10"
# Progress bar (used for the multi-hundred-MB KZG SRS download)
indicatif = "0.17"
# Home directory
dirs = "5"

[dev-dependencies]
tempfile = "3"
