[package]
name = "zkmist-cli"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "zkmist"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }
# Ethereum interaction
alloy = { version = "1", features = ["providers", "signer-local", "contract", "transport-http"] }
# ZK proof generation — Halo2-KZG
zkmist-circuits = { path = "../circuits" }
halo2_proofs.workspace = true
halo2curves.workspace = true
# Axiom backend (Phase 4 CLI prover port — see docs/axiom-backend-migration.md §14).
# Same halo2-lib v0.5.3 baseline as zkmist-circuits.
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.5.3" }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.5.3" }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", features = ["revm"] }
num-bigint = "0.4"
rand = "0.8"
# KZG verifier transcript — Keccak256-based, MUST match Halo2Verifier.sol's
# squeeze_challenge. Sourced from the vendored halo2-solidity-verifier so the
# prover and the on-chain verifier share one transcript implementation.
halo2_solidity_verifier = { path = "../vendor/halo2-solidity-verifier" }
# Merkle tree (shared library)
zkmist-merkle-tree = { path = "../merkle-tree" }
# Crypto primitives
ark-bn254 = "0.5"
ark-ff = "0.5"
light-poseidon = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
# Hidden password input
rpassword = "7"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Hex encoding/decoding
hex = "0.4"
# HTTP client for GitHub downloads + KZG SRS streaming download
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# Async stream iteration (reqwest bytes_stream) for the large KZG SRS download
futures-util = "0.3"
# SHA-256 for file integrity checks
sha2 = "0.10"
# Progress bar (used for the multi-hundred-MB KZG SRS download)
indicatif = "0.17"
# Home directory
dirs = "5"

[dev-dependencies]
tempfile = "3"
