[package]
name = "zkmist-gen-production-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "gen-production-verifier"
path = "src/main.rs"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0" }
halo2curves = "0.6"
ff = "0.13"
rand = "0.8"
dirs = "5"
sha2 = "0.10"
halo2_solidity_verifier = { path = "../vendor/halo2-solidity-verifier" }
