[package]
name = "zkmist-gen-production-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "gen-production-verifier"
path = "src/main.rs"

[dependencies]
# The REAL ZKMist circuit — now a direct dependency: this crate shares the
# workspace's single halo2 (PSE git fork), so no version split, no stub
# synthesize, no separate-workspace trick. `keygen_vk` here accepts the exact
# `ZKMistV2Claim` the CLI prover uses.
zkmist-circuits = { path = "../circuits" }
halo2_proofs.workspace = true
halo2curves.workspace = true
ff = "0.13"
rand = "0.8"
dirs = "5"
sha2 = "0.10"
halo2_solidity_verifier = { path = "../vendor/halo2-solidity-verifier" }
