[package]
name = "zkmist-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkmist-guest"
path = "src/main.rs"
test = false

[features]
default = []
test-small-tree = []

[dependencies]
ruint = "=1.17.0"  # Pin to 1.17.0 — ruint 1.18+ requires rustc 1.90, but the risc0 Docker builder (r0.1.88.0) ships rustc 1.88
ark-bn254 = "0.5"
ark-ff = "0.5"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
light-poseidon = "0.4"
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
