[package]
name = "zkmist-tools"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "compute-root"
path = "src/compute_root.rs"

[[bin]]
name = "monitor"
path = "src/monitor.rs"
required-features = ["monitoring"]

[[bin]]
name = "readiness"
path = "src/readiness.rs"

[[bin]]
name = "verify-srs"
path = "src/verify_srs.rs"

[[bin]]
name = "verify-srs-from-ptau"
path = "src/verify_srs_from_ptau.rs"

[[bin]]
name = "truncate-srs"
path = "src/truncate_srs.rs"

[dependencies]
zkmist-merkle-tree = { path = "../merkle-tree" }
zkmist-circuits = { path = "../circuits" }
ark-bn254 = "0.5"
ark-ff = "0.5"
light-poseidon = "0.4"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
dirs = "5"  # used by examples/prime_dev_srs.rs (cache path)
halo2_proofs.workspace = true
halo2curves.workspace = true
# `halo2curves-axiom` is the axiom fork's curve library — the SAME `bn256::Fr`
# type the axiom circuits (via `halo2-base`) use. Pinned to the version
# `halo2-base` v0.5.3 depends on so `compute-root`'s live nullifier
# cross-check can call `zkmist_circuits::nullifier_axiom::
# native_compute_nullifier` directly (the workspace's crates.io `halo2curves`
# 0.6.1 is a distinct type and won't type-check against the circuit API).
halo2curves-axiom = "0.7.2"
ff = "0.13"
snark-verifier = { version = "0.2", optional = true }

# Monitor dependencies
alloy = { version = "1", features = ["providers", "contract", "transport-http"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

[features]
default = []
v2 = ["snark-verifier"]
monitoring = ["alloy", "tokio", "reqwest"]
